# compiler_design

./: .gitignore  CMakeLists.txt  README.md  lexical.cpp  lexical.h  main.cpp  parser.cpp  parser.h  pda_tracer.h  sample.txt  syntactic.cpp  syntactic.h
gui/: CodeEditor.cpp  CodeEditor.h  LexicalGUI.cpp  LexicalGUI.h  NFADiagramView.cpp  NFADiagramView.h  PDAVIEW.cpp  PDAView.h  ProjectOverview.cpp  ProjectOverview.h  SyntacticGUI.cpp  SyntacticGUI.h  mainwindow.cpp  mainwindow.h
